# textris-pdf

./: .gitignore  Cargo.toml  README.md
docs/: markdown-parser.md
src/: docx.rs  lib.rs  markdown.rs  model.rs  render.rs
src/fonts/: face.rs  mod.rs
src/layout/: display.rs  list.rs  mod.rs  table.rs  tests.rs  text.rs
src/markdown/: escape.rs  export.rs  mod.rs  parse.rs
src/theme/: mod.rs  style.rs
tests/: accessibility.rs  mantis-shrimp-example-input.md  render_example.rs
