[package]
name = "textris-pdf"
version = "0.6.0"
license = "MIT"
edition = "2024"

[dependencies]
harfrust = "0.12.0"
krilla = { version = "0.8.2", default-features = false }
read-fonts = "0.41.0"
docx-rs = { version = "0.4.20", optional = true }

[features]
default = ["markdown"]
docx = ["dep:docx-rs"]
markdown = []
