[package]
name = "textris-pdf"
version = "0.8.0"
license = "MIT"
edition = "2024"

[dependencies]
harfrust = "0.12"
krilla = { version = "0.8", default-features = false }
read-fonts = "0.41"
time = { version = "0.3", default-features = false, features = ["std"] }
docx-rs = { version = "0.4", optional = true }

[features]
default = ["markdown", "markdown-parser"]
docx = ["dep:docx-rs"]
markdown = []
markdown-parser = ["markdown"]
